2008-09-22  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/smarttitles.pl: Refactored. This is a flashy rewrite; it
	improves integration with "creole.pl", "poetry.pl", et al., HTML
	configurability, CSS styleability, and perldoc-style documentation.

2008-09-22  Alex Schroeder  <alex@gnu.org>

	* modules/namespaces.pl (NewNamespaceGetAuthorLink): New hook into
	GetAuthorLink to make sure the author link is never considered
	invalid using NewNamespaceValidId.
	(NamespaceValidId): Deleted.
	(NewNamespaceValidId): Fully featured replacement only used by
	GetAuthorLink. $NamespaceSlashing remains unused.

	* modules/journal-rss.pl (JournalRssGetRcLines): New.
	(DoJournalRss): Use JournalRssGetRcLines since GetRcRss was
	changed.

2008-09-21  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (GetRcRss): Since this sub no longer takes RC lines as
	parameters, there's no point in passing @_ to ProcessRcLines.

2008-09-20  Alex Schroeder  <alex@gnu.org>

	* wiki.pl ($RssStrip): New option.
	(ItemName): Strip the default date from the item title.

	* wiki.pl (BrowsePage): Replace call to PrintRc with PrintRcHtml.
	(BrowseRc): Replace call to PrintRc with PrintRcHtml. Use
	PrintRcText instead of DoRcText.
	(PrintRc, DoRcText, DoRc, GetRc, GetRcHtml, GetRcText): Deleted.
	(GetRcLines): Moved.
	(LatestChanges, RcHtml, PrintRcHtml, PrintRcText): New.
	(StripRollbacks): Change to new format returned by GetRcLines.
	(GetRcLinesFor): Factored out the per-file code of GetRcLines.
	(ProcessRcLines): Calls the per day and per item code fragments.
	(RcHeader): Return HTML instead of printing it.
	(GetRcHtml, GetRcRss): Call ProcessRcLines instead of GetRc.
	(DoRss): Call GetRcRss instead of DoRc and passing GetRcRss.
	(DoContributors): Set parameters instead of relying on the default
	behaviour of GetRcLines.

	Change also contains a lot of whitespace changes.

	* modules/search-freetext.pl (SearchFreeNewPages): Changed result
	handling of call to GetRcLines.
